# i18n-axum

./: Cargo.toml
hello_world_axum/: Cargo.toml
src/: app.rs
