[package]
name = "hello_world_axum"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", optional = true }
leptos = { version = "0.7.0" }
leptos_meta = { version = "0.7.0" }
leptos_axum = { version = "0.7.0", optional = true }
leptos_i18n = { version = "0.5.5", features = [
  "track_locale_files",
] }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = "0.2"
simple_logger = "4"
tokio = { version = "1.35", features = ["rt-multi-thread"], optional = true }
log = "0.4"
tower = { version = "0.5.1", optional = true }
tower-http = { version = "0.6.1", features = ["fs"], optional = true }




[features]
default = ["hydrate", "ssr"]
hydrate = [
  "dep:console_error_panic_hook",
  "leptos/hydrate",
  "leptos_i18n/hydrate",
]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_i18n/axum",
]




[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]








[package.metadata.leptos]
output-name = "hello_world_axum"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"

reload-port = 3002
site-addr = "127.0.0.1:4000"







end2end-cmd = "npx playwright test"
end2end-dir = "e2e"
browserquery = "defaults"
watch = false
env = "DEV"

bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false




watch-additional-files = ["locales"]

[package.metadata.cargo-all-features]
skip_feature_sets = [["hydrate", "ssr"]]
